--- a/src/sass/common/_constants.scss
+++ b/src/sass/common/_constants.scss
@@ -74,6 +74,15 @@ $interactive-color: map-get($pot-blue, 6);
 $interactive-light-color: map-get($pot-blue, 4);
 $text-color: map-get($pot-grey, 7);
 
+$outline-width: 2px;
+$outline-dark-color: $active-color;
+$outline-dark: $outline-width solid $outline-dark-color;
+$outline-light-color: #fff;
+$outline-light: $outline-width solid $outline-light-color;
+
+$scrollbar-webkit-width: 7px;
+$scrollbar-webkit-border-radius: 20px;
+$scrollbar-color: map-get($pot-mauve, 3);
 
 // ANIMATIONS
 $animation: .5s forwards;
